miner changes on .account-icon class

--- a/css/main.css
+++ b/css/main.css
@@ -249,6 +249,9 @@ nav {
   .search-bar {
     display: none;
   }
+  .account-icon {
+    margin-top: 10px;
+  }
   #text-crousal {
     left: 15px;
   }
